# dispenser

./: .gitignore  CLI.md  CRON.md  Cargo.toml  GCP.md  INSTALL.deb.md  INSTALL.redhat.md  MIGRATION_GUIDE.md  MISSION.md  Makefile  NETWORKS.md  PROXY.md  README.md  SERVICE_CONFIG.md  TELEMETRY.md  Taskfile.yml  VARIABLES.md  justfile
.github/workflows/: main.yml  test.yml
deb/DEBIAN/: control  postinst  postrm  prerm  rules
deb/etc/systemd/system/: dispenser.service
deb/lib/systemd/system/: dispenser.service
example/: .gitignore  dispenser.toml  dispenser.vars  prod.dispenser.vars  stg.dispenser.vars
example-new/: dispenser.toml
example-new/hello-world/: service.toml
example-new/nginx/: service.toml
example-new/nginx/html/: index.html
example-old/: dispenser.vars
example-old/hello-world/: docker-compose.yaml
example/hello-world/: service.toml
example/nginx/: docker-compose.yaml
example/service1/: service.toml
example/service1/html/: index.html
example/service2/: service.toml
example/service2/html/: index.html
new_example/hello-world/: service.toml
new_example/nginx/: service.toml
plans/: OBSERVABILITY_PLAN.md  WORKFLOW_PLAN.md
rpm/: compose-watcher.spec  dispenser.spec
rpm/lib/systemd/system/: compose-watcher.service
src/: cli.rs  config.rs  config_file.rs  instance.rs  login.rs  main.rs  manifests.rs  master.rs  signals.rs
src/proxy/: acme.rs  atomic_socket.rs  certs.rs  mod.rs
src/secrets/: gcp.rs
src/service/: cron_watcher.rs  docker.rs  file.rs  instance.rs  manager.rs  manifest.rs  mod.rs  network.rs  vars.rs
src/telemetry/: buffer.rs  client.rs  events.rs  host_cpu.rs  host_disk.rs  host_memory.rs  ingestion.rs  mod.rs  otlp.rs  schema.rs  service.rs  types.rs  worker.rs
src/telemetry/buffer/: container_output.rs  deployments.rs  host_cpu.rs  host_disk.rs  host_memory.rs  json.rs  logs.rs  mod.rs  status.rs  traces.rs
src/telemetry/events/: deployment.rs  host_cpu.rs  host_disk.rs  host_memory.rs  mod.rs  output.rs  status.rs
src/telemetry/schema/: container_output.rs  deployments.rs  host_cpu.rs  host_disk.rs  host_memory.rs  logs.rs  mod.rs  status.rs  traces.rs
