[package]
name = "dispenser"
version = "0.8.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.1"
bollard = "0.19.4"
chrono = "0.4.42"
clap = { version = "4.5.18", features = ["derive"] }
cron = { version = "0.15.0", features = ["serde"] }
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
google-cloud-gax = "1.4.0"
google-cloud-secretmanager-v1 = "1.2.0"
log = "0.4.22"
minijinja = { version = "2.12.0", features = ["custom_syntax"] }
nix = { version = "0.29.0", features = ["signal"] }
sd-notify = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.18"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.19"
urlencoding = "2.1.3"


async-trait = "0.1.89"
pingora = { version = "0.6.0", features = ["lb", "openssl"] }
pingora-core = "0.6.0"
pingora-error = "0.6.0"
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-proxy = "0.6.0"
