[package]
name = "dispenser"
version = "0.21.0"
edition = "2024"
license = "MIT"

[dependencies]
rustls = { version = "0.23", features = ["aws-lc-rs"] }
base64 = "0.22.1"
bollard = "0.20"
clap = { version = "4.6.0", features = ["derive"] }
cron = { version = "0.15.0", features = ["serde"] }
deltalake = { version = "0.31", features = ["datafusion", "s3", "gcs", "azure"] }
env_logger = "0.11.10"
futures = "0.3.32"
futures-util = "0.3.32"
google-cloud-gax = "1.9.0"
google-cloud-secretmanager-v1 = "1.7.0"
log = "0.4.29"
minijinja = { version = "2.19.0", features = ["custom_syntax"] }
nix = { version = "0.29.0", features = ["signal"] }
sd-notify = "0.4.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.3.18"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
toml = "0.8.23"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v7", "serde"] }


async-trait = "0.1.89"
pingora = { version = "0.8.0", features = ["lb", "openssl"] }
pingora-core = "0.8.0"
pingora-error = "0.8.0"
pingora-http = "0.8.0"
pingora-load-balancing = "0.8.0"
pingora-proxy = "0.8.0"
openssl = "0.10"
rcgen = "0.14.7"
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "aws-lc-rs"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
x509-parser = "0.18.1"
http = "1.4.0"
axum = "0.8.8"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "logs", "trace", "metrics", "with-serde"] }
prost = "0.14.3"
bytes = "1.11.1"
dotenv = "0.15.0"
chrono = "0.4.44"
arrow = "57.3.0"
url = "2.5.8"
tikv-jemallocator = { version = "0.6.1", features = ["profiling", "stats", "override_allocator_on_supported_platforms"] }

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
